# -

./: CMakeLists.txt  LICENSE  README.md  SmartBand.uvprojx  SmartBand_技术说明文档.md
App/Inc/: app_manager.h  task_alert.h  task_bp.h  task_display.h  task_heartrate.h  task_impact.h  task_stopwatch.h  task_sysmon.h
App/Src/: app_manager.c  task_alert.c  task_bp.c  task_display.c  task_heartrate.c  task_impact.c  task_stopwatch.c  task_sysmon.c
Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: main.c  stm32l4xx_it.c  system_stm32l4xx.c
HW_Drivers/Inc/: hw_adxl345.h  hw_air780e.h  hw_max30102.h  hw_nrf24l01.h  hw_oled_ssd1306.h  hw_vibrator.h
HW_Drivers/Src/: hw_adxl345.c  hw_air780e.c  hw_max30102.c  hw_nrf24l01.c  hw_oled_ssd1306.c  hw_vibrator.c
Hardware/: BOM.csv  PCB_Design_Guide.md
Middleware/Algorithm/Inc/: algo_bp_estimation.h  algo_heartrate.h  algo_impact_detect.h
Middleware/Algorithm/Src/: algo_bp_estimation.c  algo_heartrate.c  algo_impact_detect.c
Middleware/FreeRTOS/Inc/: FreeRTOSConfig.h
Middleware/FreeRTOS/Inc/portable/: portmacro.h
Middleware/FreeRTOS/Src/: cmsis_os2.c  heap_4.c
Middleware/FreeRTOS/Src/portable/: port.c
Middleware/Protocol/Inc/: proto_alert.h
Middleware/Protocol/Src/: proto_alert.c
cmake/: STM32L431RCTx.ld  arm-none-eabi-gcc.cmake
